# state_machine

./: CMakeLists.txt  README.md  build.sh  profile
src/: CMakeLists.txt  base_state.h  context.cpp  context.h  context_fwd.h  main.cpp  simulation.h  state.h  state_ids.cpp  state_ids.h
src/logging/: logger.cpp  logger.hpp
src/sketches/quit/: state_quit.cpp  state_quit.h
src/sketches/splash/: state_splash.cpp  state_splash.h
src/sketches/start/: state_start.cpp  state_start.h
